--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <h1>Wow... ok... non me lo aspettavo, non mi sono preparato a questo! Beh allora...</h1>
     <img src="ERRORE.png" alt="Immagine scelta 1">
     <br>
-    <button onclick="scelta1a()">Dimmi di più su di te</button>
-    <button onclick="scelta1b()">Facciamo un primo appuntamento?</button>
+    <button onclick="scelta1a()">incontriamoci</button>
+    <button onclick="scelta1b()">ti prendevo per il culo</button>
   </div>
 
   <!-- RISULTATO PULSANTE 2 -->
@@ -83,26 +83,26 @@
     <h1>Hai perfettamente ragione ad avere dubbi... quindi ti svelerò chi sono</h1>
     <img src="MIRIVELO.png" alt="Immagine scelta 2">
     <br>
-    <button onclick="scelta2a()">Ok, rivelati!</button>
-    <button onclick="scelta2b()">No grazie, non mi interessa</button>
+    <button onclick="scelta2a()">Ok si, sono curiosa</button>
+    <button onclick="scelta2b()">No guarda, non mi interessa!</button>
   </div>
 
   <!-- RISULTATO PULSANTE 1A -->
   <div id="risultato-1a" style="display: none;">
-    <h1>Ecco qualcosa su di me: amo le passeggiate al tramonto e la pizza!</h1>
+    <h1>oddio si... certo.. e se ti dicessi che sono sotto casa tua??</h1>
     <img src="DIMMI.png" alt="Immagine scelta 1a">
     <br>
-    <button onclick="scelta1a1()">Che dolce! Mi piaci</button>
-    <button onclick="scelta1a2()">Hmm, interessante ma voglio sapere altro</button>
+    <button onclick="scelta1a1()">ma è inquietante</button>
+    <button onclick="scelta1a2()">no, non ci sei</button>
   </div>
 
   <!-- RISULTATO PULSANTE 1B -->
   <div id="risultato-1b" style="display: none;">
-    <h1>Certo! Che ne dici di un caffè questo weekend?</h1>
-    <img src="APPUNTAMENTO.png" alt="Immagine scelta 1b">
+    <h1>ma...</h1>
+    <img src="MORTO.png" alt="Immagine scelta 1b">
     <br>
-    <button onclick="scelta1b1()">Perfetto, ci sto!</button>
-    <button onclick="scelta1b2()">Forse è troppo presto...</button>
+    <button onclick="scelta1b1()">hahahahha godo</button>
+    <button onclick="scelta1b2()">...</button>
   </div>
 
   <!-- RISULTATO PULSANTE 2A -->
@@ -116,8 +116,8 @@
 
   <!-- RISULTATO PULSANTE 2B -->
   <div id="risultato-2b" style="display: none;">
-    <h1>Capisco... ma almeno dammi una possibilità!</h1>
-    <img src="NONINTERESSA.png" alt="Immagine scelta 2b">
+    <h1>nooooo...</h1>
+    <img src="MIBUTTO.png" alt="Immagine scelta 2b">
     <br>
     <button onclick="scelta2b1()">Va bene, una possibilità</button>
     <button onclick="scelta2b2()">No, davvero non mi interessa</button>
@@ -125,7 +125,7 @@
 
   <!-- RISULTATI FINALI LIVELLO 3 -->
   <div id="risultato-1a1" style="display: none;">
-    <h1>Yay! Allora è un sì? 💕</h1>
+    <h1>Yay! Sei la fidanzata più bella del mondooo 💕</h1>
     <img src="FINALE1A1.png" alt="Finale 1a1">
   </div>
 
@@ -155,12 +155,12 @@
   </div>
 
   <div id="risultato-2b1" style="display: none;">
-    <h1>Grazie! Non te ne pentirai, promesso! ❤️</h1>
+    <h1> ❤️</h1>
     <img src="FINALE2B1.png" alt="Finale 2b1">
   </div>
 
   <div id="risultato-2b2" style="display: none;">
-    <h1>Capisco... rispetto la tua decisione 💔</h1>
+    <h1> 💔</h1>
     <img src="FINALE2B2.png" alt="Finale 2b2">
   </div>
 
