--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <!-- RISULTATO PULSANTE 1A -->
   <div id="risultato-1a" style="display: none;">
     <h1>oddio si... certo.. e se ti dicessi che sono sotto casa tua??</h1>
-    <img src="DIMMI.png" alt="Immagine scelta 1a">
+    <img src="DAVVERO.png" alt="Immagine scelta 1a">
     <br>
     <button onclick="scelta1a1()">ma è inquietante</button>
     <button onclick="scelta1a2()">no, non ci sei</button>
@@ -108,7 +108,7 @@
   <!-- RISULTATO PULSANTE 2A -->
   <div id="risultato-2a" style="display: none;">
     <h1>Sono io! Il tuo segreto ammiratore che ti osserva da lontano!</h1>
-    <img src="RIVELAZIONE.png" alt="Immagine scelta 2a">
+    <img src="IO.png" alt="Immagine scelta 2a">
     <br>
     <button onclick="scelta2a1()">Davvero?! Che sorpresa!</button>
     <button onclick="scelta2a2()">Ok... questo è un po' inquietante</button>
@@ -126,7 +126,7 @@
   <!-- RISULTATI FINALI LIVELLO 3 -->
   <div id="risultato-1a1" style="display: none;">
     <h1>Yay! Sei la fidanzata più bella del mondooo 💕</h1>
-    <img src="FINALE1A1.png" alt="Finale 1a1">
+    <img src="BHO.png" alt="Finale 1a1">
   </div>
 
   <div id="risultato-1a2" style="display: none;">
@@ -136,7 +136,7 @@
 
   <div id="risultato-1b1" style="display: none;">
     <h1>Fantastico! Ti mando i dettagli! ☕</h1>
-    <img src="FINALE1B1.png" alt="Finale 1b1">
+    <img src="NOSTROPOSTO.png" alt="Finale 1b1">
   </div>
 
   <div id="risultato-1b2" style="display: none;">
@@ -146,7 +146,7 @@
 
   <div id="risultato-2a1" style="display: none;">
     <h1>Sì! E ora che lo sai... vuoi essere la mia Valentina? 💝</h1>
-    <img src="FINALE2A1.png" alt="Finale 2a1">
+    <img src="BACIOLAUREA.png" alt="Finale 2a1">
   </div>
 
   <div id="risultato-2a2" style="display: none;">
