--- a/index.html
+++ b/index.html
@@ -102,66 +102,66 @@
     <img src="MORTO.png" alt="Immagine scelta 1b">
     <br>
     <button onclick="scelta1b1()">hahahahha godo</button>
-    <button onclick="scelta1b2()">...</button>
+    <button onclick="scelta1b2()">premi qui per farti convincere....</button>
   </div>
 
   <!-- RISULTATO PULSANTE 2A -->
   <div id="risultato-2a" style="display: none;">
-    <h1>Sono io! Il tuo segreto ammiratore che ti osserva da lontano!</h1>
+    <h1>TAA DAAAN... ero io, il tuo scricciolooo</h1>
     <img src="IO.png" alt="Immagine scelta 2a">
     <br>
-    <button onclick="scelta2a1()">Davvero?! Che sorpresa!</button>
-    <button onclick="scelta2a2()">Ok... questo è un po' inquietante</button>
+    <button onclick="scelta2a1()">si lo sapevop hihihi</button>
+    <button onclick="scelta2a2()">wow, me l'hai proprio fatta stavolta</button>
   </div>
 
   <!-- RISULTATO PULSANTE 2B -->
   <div id="risultato-2b" style="display: none;">
-    <h1>nooooo...</h1>
+    <h1>nooooo... ora mi butto...</h1>
     <img src="MIBUTTO.png" alt="Immagine scelta 2b">
     <br>
-    <button onclick="scelta2b1()">Va bene, una possibilità</button>
+    <button onclick="scelta2b1()">ESAGERATA</button>
     <button onclick="scelta2b2()">No, davvero non mi interessa</button>
   </div>
 
   <!-- RISULTATI FINALI LIVELLO 3 -->
   <div id="risultato-1a1" style="display: none;">
-    <h1>Yay! Sei la fidanzata più bella del mondooo 💕</h1>
+    <h1>FORSDE SI...se fossi uno pazzo sconosciuto, ma hey.. SONO IOOOOO IL TUO SCRICCIOLOOOO 💕</h1>
     <img src="BHO.png" alt="Finale 1a1">
   </div>
 
   <div id="risultato-1a2" style="display: none;">
-    <h1>Certo! Posso raccontarti molto altro di me...</h1>
+    <h1>Eh no, purtroppo, ma vorrei tanto</h1>
     <img src="FINALE1A2.png" alt="Finale 1a2">
   </div>
 
   <div id="risultato-1b1" style="display: none;">
-    <h1>Fantastico! Ti mando i dettagli! ☕</h1>
-    <img src="NOSTROPOSTO.png" alt="Finale 1b1">
+    <h1>hey... non è divertente</h1>
+    <img src="CONFUSO.png" alt="Finale 1b1">
   </div>
 
   <div id="risultato-1b2" style="display: none;">
-    <h1>Nessun problema, prendiamoci il nostro tempo 😊</h1>
-    <img src="FINALE1B2.png" alt="Finale 1b2">
+    <h1>sorpresapazzaCRAZY</h1>
+    <img src="NUDO.png" alt="Finale 1b2">
   </div>
 
   <div id="risultato-2a1" style="display: none;">
-    <h1>Sì! E ora che lo sai... vuoi essere la mia Valentina? 💝</h1>
+    <h1>Detective... sicura si vuoi essere la mia Valentina? A tuo rischio e pericolo hahahaha, sappi però che per me sei la fidanzata migliore che si possa desiderare 💝</h1>
     <img src="BACIOLAUREA.png" alt="Finale 2a1">
   </div>
 
   <div id="risultato-2a2" style="display: none;">
-    <h1>Scusa! Non volevo spaventarti, sono solo timido 😅</h1>
-    <img src="FINALE2A2.png" alt="Finale 2a2">
+    <h1>Non è veroo hihihi, ma grazie 👉🏻👈🏻, sei proprio il mio amore senza fine</h1>
+    <img src="BACIOLAUREA.png" alt="Finale 2a2">
   </div>
 
   <div id="risultato-2b1" style="display: none;">
-    <h1> ❤️</h1>
-    <img src="FINALE2B1.png" alt="Finale 2b1">
+    <h1>HIHIHIH ❤️</h1>
+    <img src="IOTRISTE.png" alt="Finale 2b1">
   </div>
 
   <div id="risultato-2b2" style="display: none;">
-    <h1> 💔</h1>
-    <img src="FINALE2B2.png" alt="Finale 2b2">
+    <h1>💔</h1>
+    <img src="CRATOSGIF.png" alt="Finale 2b2">
   </div>
 
   <script>
