--- a/index.html
+++ b/index.html
@@ -126,37 +126,37 @@
   <!-- RISULTATI FINALI LIVELLO 3 -->
   <div id="risultato-1a1" style="display: none;">
     <h1>FORSDE SI...se fossi uno pazzo sconosciuto, ma hey.. SONO IOOOOO IL TUO SCRICCIOLOOOO 💕</h1>
-    <img src="BHO.png" alt="Finale 1a1">
+    <img src="MINISO.jpg" alt="Finale 1a1">
   </div>
 
   <div id="risultato-1a2" style="display: none;">
-    <h1>Eh no, purtroppo, ma vorrei tanto</h1>
-    <img src="FINALE1A2.png" alt="Finale 1a2">
+    <h1>Eh no, purtroppo, ma vorrei tanto, arriverà il nostro futuro insieme nella nostra casetta</h1>
+    <img src="CASA.png" alt="Finale 1a2">
   </div>
 
   <div id="risultato-1b1" style="display: none;">
-    <h1>hey... non è divertente</h1>
-    <img src="CONFUSO.png" alt="Finale 1b1">
+    <h1>hey... non è divertente, dammi subito un bacino perchè mi hai fastto prendere collera così...</h1>
+    <img src="MINACCIA.png" alt="Finale 1b1">
   </div>
 
   <div id="risultato-1b2" style="display: none;">
-    <h1>sorpresapazzaCRAZY</h1>
+    <h1>non te lo aspettavi eh....</h1>
     <img src="NUDO.png" alt="Finale 1b2">
   </div>
 
   <div id="risultato-2a1" style="display: none;">
-    <h1>Detective... sicura si vuoi essere la mia Valentina? A tuo rischio e pericolo hahahaha, sappi però che per me sei la fidanzata migliore che si possa desiderare 💝</h1>
+    <h1>Detective Conan tu... sicura di voler essere la mia Valentina? A tuo rischio e pericolo hahahaha, sappi però che per me sei la fidanzata migliore che si possa desiderare, TI AMO IMMENSAMENTE 💝</h1>
     <img src="BACIOLAUREA.png" alt="Finale 2a1">
   </div>
 
   <div id="risultato-2a2" style="display: none;">
-    <h1>Non è veroo hihihi, ma grazie 👉🏻👈🏻, sei proprio il mio amore senza fine</h1>
-    <img src="BACIOLAUREA.png" alt="Finale 2a2">
+    <h1>Non è vero lo so hihihi, ma grazie 👉🏻👈🏻, sei proprio il mio amore senza fine, TI AMO 4 e 70</h1>
+    <img src="BACIOFISICA.png" alt="Finale 2a2">
   </div>
 
   <div id="risultato-2b1" style="display: none;">
-    <h1>HIHIHIH ❤️</h1>
-    <img src="IOTRISTE.png" alt="Finale 2b1">
+    <h1> Beh vuol dire che mi ha riconsciuta... Ciao Ammoree Mijiooo ❤️</h1>
+    <img src="BACIOSPA.png" alt="Finale 2b1">
   </div>
 
   <div id="risultato-2b2" style="display: none;">
