--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
 
   <div id="risultato-2a2" style="display: none;">
     <h1>Non è vero lo so hihihi, ma grazie 👉🏻👈🏻, sei proprio il mio amore senza fine, TI AMO 4 e 70</h1>
-    <img src="BACIOFISICA.png" alt="Finale 2a2">
+    <img src="BACIOFISICA.webp" alt="Finale 2a2">
   </div>
 
   <div id="risultato-2b1" style="display: none;">
     <h1> Beh vuol dire che mi ha riconsciuta... Ciao Ammoree Mijiooo ❤️</h1>
-    <img src="BACIOSPA.png" alt="Finale 2b1">
+    <img src="BACIOSPA(1).png" alt="Finale 2b1">
   </div>
 
   <div id="risultato-2b2" style="display: none;">
