--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       padding: 80px 20px;
       min-height: 100vh;
     }
+    body::after {
+  content: "";
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #00bcd4; /* o qualsiasi altro colore */
+  z-index: -1;
+}
 
     h1 {
       font-size: 30px;
