--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <div id="risultato-2b2" style="display: none;">
     <h1>💔</h1>
-    <img src="CRATOSGIF.png" alt="Finale 2b2">
+    <img src="CRATOS.gif" alt="gif animata">
   </div>
 
   <script>
