--- a/index.html
+++ b/index.html
@@ -186,17 +186,17 @@
   </div>
 
   <!-- RISULTATI FINALI LIVELLO 3 -->
-  <div id="risultato-1a1" style="display: none;" class="fadeIn">
+  <div id="risultato-1a1" style="display: none;">
     <h1>FORSDE SI...se fossi uno pazzo sconosciuto, ma hey.. SONO IOOOOO IL TUO SCRICCIOLOOOO 💕</h1>
     <img src="MINISO.jpg" alt="Finale 1a1">
   </div>
 
-  <div id="risultato-1a2" style="display: none;" class="fadeIn">
+  <div id="risultato-1a2" style="display: none;">
     <h1>Eh no, purtroppo, ma vorrei tanto, arriverà il nostro futuro insieme nella nostra casetta</h1>
     <img src="CASA.png" alt="Finale 1a2">
   </div>
 
-  <div id="risultato-1b1" style="display: none;" class="fadeIn">
+  <div id="risultato-1b1" style="display: none;">
     <h1>hey... non è divertente, dammi subito un bacino perchè mi hai fatto prendere collera così...</h1>
     <img src="MINACCIA.png" alt="Finale 1b1">
   </div>
@@ -237,7 +237,7 @@
       createParticles();
   
   // Coriandoli solo per i finali
-  if (nuovaSchermata === "risultato-1a" || nuovaSchermata === "risultato-2a") {
+  if (nuovaSchermata === "risultato-1a1" || nuovaSchermata === "risultato-1b2") || nuovaSchermata === "risultato-2a2") || nuovaSchermata === "risultato-2a1") || nuovaSchermata === "risultato-2b1") {
     createConfetti();
       }
     }
