--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       createParticles();
   
   // Coriandoli solo per i finali
-  if (nuovaSchermata === "risultato-1a1" || nuovaSchermata === "risultato-1b2") || nuovaSchermata === "risultato-2a2") || nuovaSchermata === "risultato-2a1") || nuovaSchermata === "risultato-2b1") {
+  if (nuovaSchermata === "risultato-1a" || nuovaSchermata === "risultato-2a") {
     createConfetti();
       }
     }
